@@ -2,30 +2,27 @@ package uz.rivoj.education.service.jwt;
 
 import io.jsonwebtoken.Claims;
 import jakarta.servlet.http.HttpServletRequest;
+import lombok.RequiredArgsConstructor;
+import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class AuthenticationService {
-    public void authenticate(
-            Claims claims,
-            HttpServletRequest request
-    ) {
-        String userId = claims.getSubject();
-        List<String> roles = getRolesFromClaims(claims);
 
-        UsernamePasswordAuthenticationToken authenticationToken =
-                new UsernamePasswordAuthenticationToken(
-                        userId, null, getAuthorities(roles)
-                );
+    private final RedisTemplate<String, Object> redisTemplate;
+    public void authenticate(Claims claims, HttpServletRequest request) {
+        String phoneNumber = claims.getSubject();
+        List<String> roles = (List<String>) claims.get("roles");
+
+        UsernamePasswordAuthenticationToken authenticationToken = new UsernamePasswordAuthenticationToken(
+                        phoneNumber, null, getAuthorities(roles));
 
         authenticationToken.setDetails(
                 new WebAuthenticationDetailsSource().buildDetails(request)
@@ -34,16 +31,10 @@ public class AuthenticationService {
         SecurityContextHolder.getContext().setAuthentication(authenticationToken);
     }
 
-    private List getRolesFromClaims(Claims claims) {
-        return Optional.ofNullable(claims.get("roles"))
-                .filter(List.class::isInstance)
-                .map(List.class::cast)
-                .orElse(Collections.emptyList());
-    }
-
     public List<SimpleGrantedAuthority> getAuthorities(List<String> roles) {
         return roles.stream()
                 .map(SimpleGrantedAuthority::new)
-                .collect(Collectors.toList());
+                .toList();
     }
+
 }
